Removes the use of the deprecated `new Double(double)` constructor and replaces it with a call to the static `Double.valueOf(double)` method.
PhysicalDisplay.java
Mech.java
PreferenceStore.java
WeaponComparatorVB.java